# hsklearn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
config/: evaluate.yaml
config/dataset/: default.yaml
config/split/: inner.yaml  kfold.yaml  outer.yaml  stratified-kfold.yaml
outputs/2023-03-14/18-48-04/.hydra/: hydra.yaml
outputs/2023-03-14/18-49-55/.hydra/: hydra.yaml
outputs/2023-03-14/18-50-36/.hydra/: hydra.yaml
outputs/2023-03-14/18-50-41/.hydra/: hydra.yaml
outputs/2023-03-14/18-51-06/.hydra/: hydra.yaml  overrides.yaml
outputs/2023-03-14/18-51-34/.hydra/: hydra.yaml
outputs/2023-03-14/18-51-40/.hydra/: hydra.yaml
outputs/2023-03-14/18-51-46/.hydra/: config.yaml  hydra.yaml
src/hsklearn/: __init__.py  evaluate.py
src/hsklearn/datasets/: dataset.py
