[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Marco Podda <marco.podda@di.unipi.it>"]
description = "Hydra for scikit-learn"
license = "MIT"
name = "hsklearn"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
hydra-colorlog = "^1.2.0"
hydra-core = "^1.3.2"
pandas = "^1.5.3"
python = "^3.10"
python-dotenv = "^1.0.0"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipython = "^8.11.0"
jupyter = "^1.0.0"
mypy = "^1.1.1"
pre-commit = "^3.1.1"
pylint = "^2.17.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 120

[tool.pylint."messages control"]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "missing-module-docstring",
  "invalid-name",
  "too-many-arguments",
]

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
